# Medusa

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/medusa-core/: Cargo.toml
crates/medusa-core/src/: agents.rs  auth.rs  cancel.rs  checkpoint.rs  context.rs  harness.rs  hooks.rs  lib.rs  models.rs  permissions.rs  proc.rs  project.rs  sandbox.rs  session.rs  skills.rs  tools.rs  verify.rs  web.rs  workflow.rs
crates/medusa-core/src/mcp/: client.rs  mod.rs
crates/medusa-core/src/model/: exec.rs  mod.rs  schema.rs  tests.rs  types.rs  wire.rs
crates/medusa-core/src/workflow/: mod.rs  script.rs
crates/medusa-tui/: Cargo.toml
crates/medusa-tui/src/: animation.rs  main.rs  terminal.rs
