[package]
name = "medusa-core"
version = "0.1.0"
edition = "2024"
description = "Medusa coding harness engine"
license = "MIT"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
